<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            tools:context=".register.ui.RegisterFragment">

        <TextView
                android:text="@string/register_title"
                style="@style/LightBlackMediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/registerTitleTextView"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/userEmailText"
                android:hint="@string/email"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.517"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/userNameEditText"/>


        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/username"
                android:id="@+id/userNameEditText"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="76dp"
                app:layout_constraintTop_toBottomOf="@+id/registerTitleTextView"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:ems="10"
                android:id="@+id/passwordText"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/userEmailText"
                app:layout_constraintHorizontal_bias="0.439"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirmPassword"
                android:ems="10"
                android:id="@+id/confirmPasswordText"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.517"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/passwordText"/>

        <Button
                android:text="@string/create_account"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:id="@+id/createAccountButton"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.497"
                style="@style/ButtonStyle"
                android:layout_marginTop="88dp"
                app:layout_constraintTop_toBottomOf="@+id/confirmPasswordText"/>

        <TextView
                android:text="@string/already_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/navigateToLoginTextView"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/createAccountButton"
                android:layout_marginTop="24dp"
                style="@style/BlackMediumText"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>