<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                       xmlns:app="http://schemas.android.com/apk/res-auto"
                                                       xmlns:tools="http://schemas.android.com/tools"
                                                       android:layout_width="match_parent"
                                                       android:layout_height="match_parent"
                                                       android:padding="15dp"
                                                       tools:context=".login.ui.LoginFragment">

        <TextView
                android:text="@string/login_title"
                style="@style/LightBlackMediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/registerTitleTextView"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/userEmailText"
                android:hint="@string/email"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.482"
                android:layout_marginTop="120dp"
                app:layout_constraintTop_toBottomOf="@+id/registerTitleTextView"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:ems="10"
                android:id="@+id/confirmPasswordText"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/userEmailText"
                app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:text="@string/forgot_password"
                style="@style/LightBlackMediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/forgotPasswordTextView"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/confirmPasswordText"/>

        <Button
                android:text="@string/sign_in"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:id="@+id/createAccountButton"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.497"
                android:layout_marginTop="36dp"
                app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTextView"
                style="@style/ButtonStyle"/>

        <TextView
                android:text="@string/dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/navigateToRegisterationTextView"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/createAccountButton"
                android:layout_marginTop="24dp"
                style="@style/BlackMediumText"/>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>