<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".category.ui.CreateCategoryFragment">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:id="@+id/categoryTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/categoryText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:hint="@string/category"/>

            <TextView
                    android:text="@string/category_desc"
                    style="@style/TextDescStyle"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/categoryTextInputLayout"
                android:id="@+id/descTextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:hint="@string/description"/>

            <TextView
                    android:text="@string/desc_category_desc"
                    style="@style/TextDescStyle"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:text="@string/create_category"
                android:layout_width="221dp"
                android:layout_height="wrap_content"
                android:id="@+id/createCategoryButton"
                style="@style/ButtonStyle"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="108dp"
                app:layout_constraintTop_toBottomOf="@+id/descTextInputLayout"/>

        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/categoryProgressBar"
                android:layout_marginTop="112dp"
                app:layout_constraintTop_toBottomOf="@+id/descTextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>